--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"install:hasky": "hasky:install"
 	},
 	"dependencies": {
+		"@types/firebase": "^3.2.1",
 		"firebase": "^9.5.0",
 		"next": "12.0.4",
 		"react": "17.0.2",
