--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
 		"prettier"
 	],
 	"rules": {
-		"react/react-in-jsx-scope": "off"
+		"react/react-in-jsx-scope": "off",
+		"react/prop-types": "off",
+		"react/no-children-prop": "off"
 	}
 }
