--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,11 +25,13 @@
 		"plugin:@typescript-eslint/eslint-recommended",
 		"plugin:@typescript-eslint/recommended",
 		"plugin:react/recommended",
+		"plugin:tailwindcss/recommended",
 		"prettier"
 	],
 	"rules": {
 		"react/react-in-jsx-scope": "off",
 		"react/prop-types": "off",
 		"react/no-children-prop": "off"
-	}
+	},
+	"ignorePatterns": ["*.config.js"]
 }
