--- a/package.json
+++ b/package.json
@@ -28,13 +28,18 @@
 		"@types/react": "17.0.37",
 		"@typescript-eslint/eslint-plugin": "^5.5.0",
 		"@typescript-eslint/parser": "^5.5.0",
+		"autoprefixer": "^10.4.7",
 		"eslint": "^8.3.0",
 		"eslint-config-next": "12.0.4",
 		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-tailwindcss": "^3.5.0",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.1.2",
 		"msw": "^0.36.3",
-		"prettier": "^2.5.0",
+		"postcss": "^8.4.14",
+		"prettier": "^2.6.2",
+		"prettier-plugin-tailwindcss": "^0.1.11",
+		"tailwindcss": "^3.0.24",
 		"typescript": "4.5.2"
 	},
 	"lint-staged": {
