--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
 	"dependencies": {
 		"@emotion/react": "^11.7.0",
 		"@emotion/styled": "^11.6.0",
+		"@mui/icons-material": "^5.8.2",
 		"@mui/material": "^5.2.2",
 		"@mui/styled-engine-sc": "^5.1.0",
+		"@svgr/webpack": "^6.2.1",
 		"@types/firebase": "^3.2.1",
 		"axios": "^0.24.0",
 		"firebase": "^9.5.0",
